--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@uniswap/governance": "^1.0.2",
     "@uniswap/liquidity-staker": "^1.0.2",
     "@uniswap/merkle-distributor": "1.0.1",
-    "@uniswap/sdk-core": "^4.0.9",
+    "@uniswap/sdk-core": "5.3.0",
     "@uniswap/token-lists": "^1.0.0-beta.27",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
@@ -103,7 +103,8 @@
     "lint": "yarn eslint --ignore-path .gitignore --cache --cache-location node_modules/.cache/eslint/ .",
     "codegen:schema": "npx apollo client:download-schema --endpoint=https://api.thegraph.com/subgraphs/name/ianlapham/uniswap-v3-rinkeby",
     "codegen:generate": "apollo codegen:generate --localSchemaFile=schema.json --target=typescript --includes=src/**/*.ts --tagName=gql --addTypename --globalTypesFile=src/types/graphql-global-types.ts types",
-    "deduplicate": "yarn-deduplicate --strategy=highest"
+    "deduplicate": "yarn-deduplicate --strategy=highest",
+    "postinstall": "patch-package"
   },
   "eslintConfig": {
     "extends": "react-app",
@@ -144,6 +145,7 @@
     "ms": "^2.1.3",
     "numbro": "^2.3.2",
     "numeral": "^2.0.6",
+    "patch-package": "^8.0.0",
     "react-hot-keys": "^2.7.2",
     "react-hotkeys": "^2.0.0",
     "recharts": "^2.0.9",
